syntax = "proto3";

package hello;
option go_package = "proto/hello";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc GetData (DataRequest) returns (DataResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
  int64 request_id = 2;
}

message DataRequest {
  string query = 1;
}

message DataResponse {
  string data = 1;
  int64 processing_time_ms = 2;
}